--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<section>
 					<div><img src="assets/images/triangle.png" class="medium margin-none"></div>
 					<p class="small">The <strong>three</strong> core aspects of computer technology are: <strong class="featured">hardware</strong>, <strong class="featured">software</strong> and <strong class="featured"><u>peopleware</u></strong>.</p>
-					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction..</p>
+					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as <strong>developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction</strong>...</p>
 				</section>
 
 				<section>
@@ -114,12 +114,12 @@
 					<p><strong class="featured">Production</strong> vs <strong class="featured">Development</strong></p>
 					<table class="xsmall">
 						<tr>
-							<td class="right">Strict & Clear phases, Especialization, One Process</td>
-							<td>Creativity, Motivation, Invidividual Skills, Communication</td>
+							<td class="right fragment">Strict & Clear phases, Especialization, One Process</td>
+							<td class="fragment">Creativity, Motivation, Invidividual Skills, Communication</td>
 						</tr>
 						<tr>
-							<td class="right italic">Requirements → Design → Build → Testing → Release</td>
-							<td class="italic">Open to change, not clear specifications, what does the client need?</td>
+							<td class="right italic fragment">Requirements → Design → Build → Testing → Release</td>
+							<td class="italic fragment">Open to change, not clear specifications, what does the client need?</td>
 						</tr>
 					</table>
 					<p ></p>
@@ -130,26 +130,26 @@
 					<h3>Classic Software Development Mistakes (People)</h3>
 					<p class="xsmall">(McConnell, 1996)</p>
 					<ol  class="xsmall">
-						<li>Undermined Motivation</li>
-						<li>Weak personnel</li>
-						<li>Uncontrolled problem employees</li>
-						<li>Heroics</li>
-						<li>Adding pleople to late project</li>
-						<li>Noisy, crowded offices</li>
-						<li>Friction between developers & customers</li>
-						<li>Unrealistic expectations</li>
-						<li>Lack of effective project sponsorship</li>
-						<li>Lack of stakeholder buy-in</li>
+						<li class="fragment">Undermined Motivation</li>
+						<li class="fragment">Weak personnel</li>
+						<li class="fragment">Uncontrolled problem employees</li>
+						<li class="fragment">Heroics</li>
+						<li class="fragment">Adding pleople to late project</li>
+						<li class="fragment">Noisy, crowded offices</li>
+						<li class="fragment">Friction between developers & customers</li>
+						<li class="fragment">Unrealistic expectations</li>
+						<li class="fragment">Lack of effective project sponsorship</li>
+						<li class="fragment">Lack of stakeholder buy-in</li>
 					</ol>
 				</section>
 
 				<section>
 					<h3>Manifesto for Agile Software Development</h3>
 					<ul class="xsmall none center">
-						<li><strong class="featured">Individuals and interactions</strong> over <em>processes and tools</em></li>
-						<li><strong class="featured">Working software</strong> over <em>comprehensive documentation</em></li>
-						<li><strong class="featured">Customer collaboration</strong> over <em>contract negotiation</em></li>
-						<li><strong class="featured">Responding to change</strong> over <em>following a plan</em></li>
+						<li class="fragment"><strong class="featured">Individuals and interactions</strong> over <em>processes and tools</em></li>
+						<li class="fragment"><strong class="featured">Working software</strong> over <em>comprehensive documentation</em></li>
+						<li class="fragment"><strong class="featured">Customer collaboration</strong> over <em>contract negotiation</em></li>
+						<li class="fragment"><strong class="featured">Responding to change</strong> over <em>following a plan</em></li>
 					</ul>
 
 				</section>
@@ -157,40 +157,40 @@
 				<section>
 					<h4>12 Principles of Agile Software Development</h4>
 					<ul class="xxsmall none center">
-						<li>Our highest priority is to <strong class="xbig">satisfy the customer</strong> through early and continuous delivery of <strong class="xbig">valuable software</strong>.</li>
-						<li>Welcome <strong class="xbig">changing requirements</strong>, even late in	development. Agile processes harness change for the customer's <strong class="xbig">competitive advantage</strong>.</li>
+						<li class="fragment">Our highest priority is to <strong class="xbig">satisfy the customer</strong> through early and continuous delivery of <strong class="xbig">valuable software</strong>.</li>
+						<li class="fragment">Welcome <strong class="xbig">changing requirements</strong>, even late in	development. Agile processes harness change for the customer's <strong class="xbig">competitive advantage</strong>.</li>
 
-						<li><strong class="xbig">Deliver</strong> working software <strong class="xbig">frequently</strong>, from a
+						<li class="fragment"><strong class="xbig">Deliver</strong> working software <strong class="xbig">frequently</strong>, from a
 						couple of weeks to a couple of months, with a
 						preference to the shorter timescale.</li>
 
-						<li>Business people and developers must <strong class="xbig">work
+						<li class="fragment">Business people and developers must <strong class="xbig">work
 						together</strong> daily throughout the project.</li>
 
-						<li>Build projects around <strong class="xxbig featured">motivated individuals</strong>.
+						<li class="fragment">Build projects around <strong class="xxbig featured">motivated individuals</strong>.
 						Give them the <strong class="xbig">environment and support</strong> they need,
 						and trust them to get the job done.</li>
 
-						<li>The most efficient and effective method of
+						<li class="fragment">The most efficient and effective method of
 						conveying information to and within a development
 						team is <strong class="xbig">face-to-face conversation</strong>.</li>
 
-						<li><strong class="xbig">Working software</strong> is the primary <strong class="xbig">measure of progress</strong>.</li>
+						<li class="fragment"><strong class="xbig">Working software</strong> is the primary <strong class="xbig">measure of progress</strong>.</li>
 
-						<li>Agile processes promote <strong class="xbig">sustainable development</strong>.
+						<li class="fragment">Agile processes promote <strong class="xbig">sustainable development</strong>.
 						The sponsors, developers, and users should be able
 						to maintain a constant pace indefinitely.</li>
 
-						<li>Continuous attention to technical excellence
+						<li class="fragment">Continuous attention to technical excellence
 						and <strong class="xbig">good design enhances agility</strong>.</li>
 
-						<li><strong class="xbig">Simplicity</strong> --the art of maximizing the amount
+						<li class="fragment"><strong class="xbig">Simplicity</strong> --the art of maximizing the amount
 						of work not done-- is essential.</li>
 
-						<li>The best architectures, requirements, and designs
+						<li class="fragment">The best architectures, requirements, and designs
 						emerge from <strong class="xxbig featured">self-organizing teams</strong>.</li>
 
-						<li>At regular intervals, the team reflects on how
+						<li class="fragment">At regular intervals, the team reflects on how
 						to <strong class="xbig">become more effective</strong>, then tunes and adjusts
 						its behavior accordingly.</li>
 					</ul>
@@ -427,18 +427,30 @@
 				</section>
 
 				<section>
-					<h3>Leadership Models: Strict Control</h3>
+					<h3>Leadership Models: Classic</h3>
+					<p class="italic">"Follow my rules, I'm the one who thinks here!"</p>
+					<p class="italic small">Strict Control</p>
 					<img src="assets/images/boss.jpg" alt="boss">
 				</section>
 
 				<section>
+					<h3>Leadership Models: The Hero</h3>
+					<p class="italic">"Soon or later we will need me (I've ensure that)"</p>
+					<p class="italic small">Dependant teams</p>
+					<img src="assets/images/hero.jpg" alt="Heroe">
+				</section>
+
+				<section>
 					<h3>Leadership Models: Servant</h3>
+					<p class="italic">"Oh my lord, what do you need?"</p>
+					<p class="italic small">Powerless</p>
 					<img src="assets/images/servant.png" alt="Servant" class="large">
 				</section>
 
 				<section>
 					<h3>Leadership Models: Host & Guests</h3>
-					<p>Rules, Limits, Actions</p>
+					<p class="italic">"Enjoy, have fun, and take responsibility"</p>
+					<p class="italic small">Rules, Limits, Actions</p>
 					<img src="assets/images/party.jpg" alt="Party" class="large">
 				</section>
 
@@ -470,19 +482,6 @@
 					@TODO image!
 				</section>
 
-				<section>
-					<h3>Minimize Bureaucracy</h3>
-					<p class="small">Kills entrepreneurial spirit: creativity, flexibility, initiative, teamwork, self-confidence, and critical thinking.</p>
-					<p class="italic">Same approach, Same results</p>
-					<img src="assets/images/papers.png" class="large">
-				</section>
-
-				<section>
-					<h3>Maximize Failure?</h3>
-					<p class="small">Secure environment: avoid fear to fail</p>
-					<p>Celebrate <strong>Learning</strong> (not failure or success)</p>
-				</section>
-
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 4</em>
 					<h2>Multifunctional teams</h2>
@@ -498,6 +497,7 @@
 						<span class="fragment">, Frontend</span>
 						<span class="fragment">, Backend</span>
 						<span class="fragment">, Site-Building...</span>
+						<span class="fragment strong"> What else?</span>
 					</p>
 					<p><img src="assets/images/tool-box.png" alt="ToolBox" class="large"></p>
 					<p class="fragment">The FullStack <strong>Mith</strong></p>
@@ -683,6 +683,19 @@
 						<li>Neverending meetings</li>
 						<li>Unused features</li>
 					</ul>
+				</section>
+
+				<section>
+					<h3>Waste: Unreasonable Bureaucracy</h3>
+					<p class="small">Kills entrepreneurial spirit: creativity, flexibility, initiative, teamwork, self-confidence, and critical thinking.</p>
+					<p class="italic">Same approach, Same results</p>
+					<img src="assets/images/papers.png" class="large">
+				</section>
+
+				<section>
+					<h3>Waste: Maximize Failure</h3>
+					<p class="small">Secure environment: avoid fear to fail</p>
+					<p>Celebrate <strong>Learning</strong> (not failure or success)</p>
 				</section>
 
 				<section>
