--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
 
 				</section>
 
+
+				<!-- Intro -->
+
+				<section>
+					<p class="small"><em>Maybe... the major problems of systems work are not so much <strong class="featured">technical</strong> as <strong class="featured">sociological</strong>.</em></p>
+					<p class="xsmall right">(DeMarco & Lister, 1987)</p>
+				</section>
+
 				<!-- Personal presentation -->
 				<section data-background="assets/images/background-secondary.png">
 					<div><img src="assets/images/personal-square.jpg" class="profile-photo"></div>
 					<h4>Jorge Tutor</h4>
-					<div class="xsmall"><em>Drupal Senior Developer <br> & <strong>Agile Enthusiast</strong></em></div>
+					<div class="xsmall"><em>Drupal Developer <br> & <strong>Agile Enthusiast</strong></em></div>
 					<div class="small"><a href="https://twitter.com/jltutor" target="_blank">@jltutor</a></div>
 					<p class="xsmall"><a href="https://drupal.org/u/gedur" target="_blank">drupal.org/u/gedur</a></p>
 					<img src="assets/images/metadrop-logo.svg" class="metadrop-logo">
@@ -64,19 +72,15 @@
 				<!-- START -->
 
 				<section>
-					<p class="small"><em>Maybe... the major problems of systems work are not so much <strong class="featured">technical</strong> as <strong class="featured">sociological</strong>.</em></p>
-					<p class="xsmall right">(DeMarco & Lister, 1987)</p>
-				</section>
-
-				<section>
 					<p class="xsmall left"><em>In this session we will talk about:</em></p>
 					<ol>
 						<li>Introduction to Peopleware</li>
-						<li>Motivation</li>
 						<li>Self-organized teams</li>
 						<li>Multifunctional teams</li>
 						<li>Productivity & waste</li>
+						<li>Motivation</li>
 						<li>Improvement</li>
+						<li>Conclusions</li>
 					</ol>
 				</section>
 
@@ -111,9 +115,10 @@
 				</section>
 
 				<section>
+					<h3>Are we in the same area?</h3>
 					<p><strong class="featured">Production</strong> vs <strong class="featured">Development</strong></p>
 					<table class="xsmall">
-						<tr>
+						<tr class="width-50">
 							<td class="right fragment">Strict & Clear phases, Especialization, One Process</td>
 							<td class="fragment">Creativity, Motivation, Invidividual Skills, Communication</td>
 						</tr>
@@ -125,11 +130,11 @@
 					<p ></p>
 				</section>
 
-
 				<section>
 					<h3>Classic Software Development Mistakes (People)</h3>
 					<p class="xsmall">(McConnell, 1996)</p>
-					<ol  class="xsmall">
+					<img src="assets/images/fail.jpg" alt="Fail" class="medium">
+					<ol  class="xsmall right-70">
 						<li class="fragment">Undermined Motivation</li>
 						<li class="fragment">Weak personnel</li>
 						<li class="fragment">Uncontrolled problem employees</li>
@@ -145,6 +150,7 @@
 
 				<section>
 					<h3>Manifesto for Agile Software Development</h3>
+					<p class="italic xxsmall">On February 11-13, <strong>2001</strong>, at The Lodge at Snowbird ski resort in the Wasatch mountains of Utah, seventeen people met to talk, ski, relax, and try to find common ground...</p>
 					<ul class="xsmall none center">
 						<li class="fragment"><strong class="featured">Individuals and interactions</strong> over <em>processes and tools</em></li>
 						<li class="fragment"><strong class="featured">Working software</strong> over <em>comprehensive documentation</em></li>
@@ -246,167 +252,16 @@
 				</section>
 
 				<section>
-					<h3>Tribal Leadership</h3>
-					<p class="xxsmall">(Logan, King & Fischer-Wright, 2008)</p>
-					<table class="xsmall">
-						<tr class="small">
-							<th>Stage</th>
-							<th>Mood</th>
-							<th>Theme</th>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
-							<td>Life sucks</td>
-						</tr>
-						<tr>
-							<td>2</td>
-							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
-							<td>My Life sucks</td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
-							<td>I'm great (and you're not!)</td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
-							<td>We'are great (and they're not!)</td>
-						</tr>
-						<tr>
-							<td>5</td>
-							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
-							<td>Life is great</td>
-						</tr>
-					</table>
-				</section>
-
-				<section>
-					<h3>Adaptative Complex System</h3>
-					<p class="xsmall">Compound by different agents</p>
+					<h3>The Power of the Team</h3>
+					<img src="assets/images/gears.jpg" alt="gears" class="medium margin-none">
+					<p class="xsmall">Adaptative <strong>Complex</strong> System compound by <strong class="featured">different agents</strong></p>
 					<p class="small">Interacted, interconnected, organized (self)</p>
 					<p class="small">Adapt, compete & colaborate: <strong>objetive</strong></p>
 					<p class="xsmall">Sinergy, different visions (Planning Poker*)</p>
 				</section>
 
-				<section>
-					<h3>Adaptative Complex System Risks</h3>
-					<p class="xsmall">Precidibility, simplistic solutions, hierarchy...</p>
-					<p class="xsmall">Complex does not mean <strong>complicated</strong></p>
-				</section>
-
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 2</em>
-					<h2>Motivation</h2>
-					<p class="italic small">The Eye of the Tiger</p>
-				</section>
-
-				<section>
-					<h3>The Human Side of Enterprise</h3>
-					<p class="xxsmall">(McGregor, 1957)</p>
-					<table class="xsmall cols-2">
-						<tr>
-							<th class="right">The <strong class="xxbig featured">X</strong> Theory</th>
-							<th>The <strong class="xxbig featured">Y</strong> Theory</th>
-						</tr>
-						<tr>
-							<td class="right">Passive, Avoid Responsability, Need to be Managed, No Ambition</td>
-							<td>Responsable, Participative, Self-Management</td>
-						</tr>
-						<tr>
-							<td class="right italic">Persuade, Reward, Punish, Control</td>
-							<td class="italic">Delegate, Decentralize, Trust, Facilitate, Evaluate</td>
-						</tr>
-					</table>
-				</section>
-
-				<section>
-					<h3>The Maslow Pyramid</h3>
-					<p class="xsmall">Salary → Environment → Relationships → Self-Esteem* → Reputation*...</p>
-					<p><img src="assets/images/maslow.jpg" alt="Maslow Pyramid" class="large"></p>
-				</section>
-
-				<section>
-					<h3>Why we do what we do?</h3>
-					<table class="xsmall cols-2">
-						<tr>
-							<th class="right">Extrinsic</th>
-							<th>Intrinsic</th>
-						</tr>
-						<tr>
-							<td class="right"><strong class="featured">Punishment & Rewards</strong></td>
-							<td><strong class="featured">Mission Fulfillment</strong></td>
-						</tr>
-						<tr>
-							<td class="right xsmall">Because of the outcome that will result by doing the task</td>
-							<td class="xsmall">Because ot the interest and enjoyment in the task itself</td>
-						</tr>
-						<tr>
-							<td class="right italic">Promotions, Pay raises, Bonuses, Benefits, Prizes, Winning, Perks</td>
-							<td class="italic">Enjoyment, Purpose, Growth, Curiosity, Passion, Self-expression, Fun</td>
-						</tr>
-					</table>
-					<p class="small italic">The overjustfication effect</p>
-				</section>
-
-				<section>
-					<h3>Six Rules for Rewards</h3>
-					<p class="xsmall">(Jurgen Appelo, 2011)</p>
-					<ol class="small">
-						<li><strong>Don’t</strong> promise rewards <strong>in advance</strong>.
-							<div class="xxsmall">Give rewards at unexpected times so that people don’t change their intentions and focus on the reward.</div></li>
-						<li>Keep anticipated rewards <strong>small</strong>.
-							<div class="xxsmall">You cannot always prevent people from anticipating rewards. But this may be harmless when the rewards are small.</div></li>
-						<li>Reward <strong>continuously</strong>, not just once.
-							<div class="xxsmall">Every day can be a day to celebrate something. Every day is an opportunity for a reward.</div></li>
-						<li>Reward <strong>publicly</strong>, not privately.
-							<div class="xxsmall">Everyone should know what work is appreciated and why. A regular public reminder works better than a private one.</div></li>
-						<li>Reward <strong>behaviors</strong>, not only outcomes.
-							<div class="xxsmall">Outcomes can often be achieved through shortcuts while behavior is about hard work and effort.</div></li>
-						<li>Reward <strong>peers</strong>, not only subordinates.
-							<div class="xxsmall">Peers often know better than managers which of their colleagues deserve a compliment.</div></li>
-					</ol>
-				</section>
-
-				<section>
-					<h3>What motivates you?</h3>
-					<ul class="small none">
-						<li>Knowledge</li>
-						<li>Freedom</li>
-						<li>Honor</li>
-						<li>Status</li>
-						<li>Relationships</li>
-						<li>Order</li>
-						<li>Objetive</li>
-					</ul>
-				</section>
-
-				<section>
-					<h3>Kudo Box</h3>
-					<img src="assets/images/kudobox.jpg" alt="Faces" class="large">
-				</section>
-
-				<section>
-					<h3>Niko-Niko Calendar</h3>
-					<img src="assets/images/nikoniko.png" alt="Faces" class="large">
-				</section>
-
-				<section>
-					<h3>Ask the Team: One 2 One Meetings</h3>
-					<ul class="xsmall none">
-						<li><strong class="featured">OPEN</strong> - What's on your mind?</li>
-						<li><strong class="featured">SELF ESTEEM</strong> - What is your biggest accomplishment this month?</li>
-						<li><strong class="featured">CHALLENGE</strong> - What’s your biggest challenge right now?</li>
-						<li><strong class="featured">FOCUS</strong> - What do you want?</li>
-						<li><strong class="featured">IMPROVE</strong> - What things should we do differently? What processes can we improve?</li>
-						<li><strong class="featured">RESOURCES</strong> - What resources would be helpful to you right now?</li>
-						<li><strong class="featured">HELP</strong> - Is there anything I can help you with?</li>
-					</ul>
-				</section>
-
-				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 3</em>
 					<h2>Self-organized teams</h2>
 					<p class="italic small">The default way of management in nature</p>
 				</section>
@@ -437,7 +292,7 @@
 					<h3>Leadership Models: The Hero</h3>
 					<p class="italic">"Soon or later we will need me (I've ensure that)"</p>
 					<p class="italic small">Dependant teams</p>
-					<img src="assets/images/hero.jpg" alt="Heroe">
+					<img src="assets/images/hero.jpg" alt="Heroe" class="large">
 				</section>
 
 				<section>
@@ -483,7 +338,7 @@
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 4</em>
+					<em>Chapter 3</em>
 					<h2>Multifunctional teams</h2>
 					<p class="italic small">one for all and all for one</p>
 				</section>
@@ -649,7 +504,7 @@
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 5</em>
+					<em>Chapter 4</em>
 					<h2>Productivity & Waste</h2>
 					<p class="italic small">More hours != more work done</p>
 				</section>
@@ -753,6 +608,163 @@
 
 				<section>
 					<h3>Self Productivity: GTD</h3>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 5</em>
+					<h2>Motivation</h2>
+					<p class="italic small">The Eye of the Tiger</p>
+				</section>
+
+				<section>
+					<h3>The Human Side of Enterprise</h3>
+					<p class="xxsmall">(McGregor, 1957)</p>
+					<table class="xsmall cols-2">
+						<tr>
+							<th class="right">The <strong class="xxbig featured">X</strong> Theory</th>
+							<th>The <strong class="xxbig featured">Y</strong> Theory</th>
+						</tr>
+						<tr>
+							<td class="right">Passive, Avoid Responsability, Need to be Managed, No Ambition</td>
+							<td>Responsable, Participative, Self-Management</td>
+						</tr>
+						<tr>
+							<td class="right italic">Persuade, Reward, Punish, Control</td>
+							<td class="italic">Delegate, Decentralize, Trust, Facilitate, Evaluate</td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
+					<h3>What is the current stage of my team?</h3>
+					<p class="xxsmall"> Tribal Leadership - (Logan, King & Fischer-Wright, 2008)</p>
+					<table class="xsmall">
+						<tr class="small">
+							<th>Stage</th>
+							<th>Mood</th>
+							<th>Theme</th>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
+							<td>Life sucks</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
+							<td>My Life sucks</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
+							<td>I'm great (and you're not!)</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
+							<td>We'are great (and they're not!)</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
+							<td>Life is great</td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
+					<h3>The Maslow Pyramid</h3>
+					<p class="xsmall">Salary → Environment → Relationships → Self-Esteem* → Reputation*...</p>
+					<p><img src="assets/images/maslow.jpg" alt="Maslow Pyramid" class="large"></p>
+				</section>
+
+				<section>
+					<h3>Why we do what we do?</h3>
+					<table class="xsmall cols-2">
+						<tr>
+							<th class="right">Extrinsic</th>
+							<th>Intrinsic</th>
+						</tr>
+						<tr>
+							<td class="right"><strong class="featured">Punishment & Rewards</strong></td>
+							<td><strong class="featured">Mission Fulfillment</strong></td>
+						</tr>
+						<tr>
+							<td class="right xsmall">Because of the outcome that will result by doing the task</td>
+							<td class="xsmall">Because ot the interest and enjoyment in the task itself</td>
+						</tr>
+						<tr>
+							<td class="right italic">Promotions, Pay raises, Bonuses, Benefits, Prizes, Winning, Perks</td>
+							<td class="italic">Enjoyment, Purpose, Growth, Curiosity, Passion, Self-expression, Fun</td>
+						</tr>
+					</table>
+					<p class="small italic">The overjustfication effect</p>
+				</section>
+
+				<section>
+					<h3>Six Rules for Rewards</h3>
+					<p class="xsmall">(Jurgen Appelo, 2011)</p>
+					<ol class="small">
+						<li class="fragment"><strong>Don’t</strong> promise rewards <strong>in advance</strong>.
+							<div class="xxsmall">Give rewards at unexpected times so that people don’t change their intentions and focus on the reward.</div></li>
+						<li class="fragment">Keep anticipated rewards <strong>small</strong>.
+							<div class="xxsmall">You cannot always prevent people from anticipating rewards. But this may be harmless when the rewards are small.</div></li>
+						<li class="fragment">Reward <strong>continuously</strong>, not just once.
+							<div class="xxsmall">Every day can be a day to celebrate something. Every day is an opportunity for a reward.</div></li>
+						<li class="fragment">Reward <strong>publicly</strong>, not privately.
+							<div class="xxsmall">Everyone should know what work is appreciated and why. A regular public reminder works better than a private one.</div></li>
+						<li class="fragment">Reward <strong>behaviors</strong>, not only outcomes.
+							<div class="xxsmall">Outcomes can often be achieved through shortcuts while behavior is about hard work and effort.</div></li>
+						<li class="fragment">Reward <strong>peers</strong>, not only subordinates.
+							<div class="xxsmall">Peers often know better than managers which of their colleagues deserve a compliment.</div></li>
+					</ol>
+				</section>
+
+				<section>
+					<h3>What motivates you?</h3>
+					<ul class="small none">
+						<li>Knowledge</li>
+						<li>Freedom</li>
+						<li>Honor</li>
+						<li>Status</li>
+						<li>Relationships</li>
+						<li>Order</li>
+						<li>Objetive</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Kudo Box</h3>
+					<img src="assets/images/kudobox.jpg" alt="Faces" class="large">
+				</section>
+
+				<section>
+					<h3>Niko-Niko Calendar</h3>
+					<img src="assets/images/nikoniko.png" alt="Faces" class="large">
+				</section>
+
+				<section>
+					<h3>Ask the Team: One 2 One Meetings</h3>
+					<ul class="xsmall none">
+						<li><strong class="featured">OPEN</strong> - What's on your mind?</li>
+						<li><strong class="featured">SELF ESTEEM</strong> - What is your biggest accomplishment this month?</li>
+						<li><strong class="featured">CHALLENGE</strong> - What’s your biggest challenge right now?</li>
+						<li><strong class="featured">FOCUS</strong> - What do you want?</li>
+						<li><strong class="featured">IMPROVE</strong> - What things should we do differently? What processes can we improve?</li>
+						<li><strong class="featured">RESOURCES</strong> - What resources would be helpful to you right now?</li>
+						<li><strong class="featured">HELP</strong> - Is there anything I can help you with?</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Team Identity</h3>
+					<p class="small">Team Name</p>
+					<ul>
+						<li>What make us specials?</li>
+						<li>What do we want to remember?</li>
+						<li>What do represent us?</li>
+					</ul>
+					@TODO: dragon!
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
