--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 				<section>
 					<h3>No Managers ≈ No testers</h3>
 					<p class="xsmall">"But do we need <strong>managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>. It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
-					<p class="xxsmall right">Jurge Appelo</p>
+					<p class="xxsmall right">Jurgen Appelo</p>
 				</section>
 
 				<section>
@@ -337,10 +337,51 @@
 					@TODO image!
 				</section>
 
+				<section>
+					<h3>Security first</h3>
+				</section>
+
+				<section>
+					<h3>What is the current stage of my team?</h3>
+					<p class="xxsmall"> Tribal Leadership - (Logan, King & Fischer-Wright, 2008)</p>
+					<table class="xsmall">
+						<tr class="small">
+							<th>Stage</th>
+							<th>Mood</th>
+							<th>Theme</th>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
+							<td>Life sucks</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
+							<td>My Life sucks</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
+							<td>I'm great (and you're not!)</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
+							<td>We'are great (and they're not!)</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
+							<td>Life is great</td>
+						</tr>
+					</table>
+				</section>
+
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 3</em>
 					<h2>Multifunctional teams</h2>
-					<p class="italic small">one for all and all for one</p>
+					<p class="italic small">One for all and all for one</p>
 				</section>
 
 				<section>
@@ -506,7 +547,7 @@
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 4</em>
 					<h2>Productivity & Waste</h2>
-					<p class="italic small">More hours != more work done</p>
+					<p class="italic small">More hours ≠ more work done</p>
 				</section>
 
 				<section>
@@ -600,14 +641,25 @@
 
 				<section>
 					<h3>Team Productivity: TimeBoxing</h3>
+					<ul>
+						<li>Meetings</li>
+						<li>User Stories / Tasks</li>
+					</ul>
 				</section>
 
 				<section>
 					<h3>Self Productivity: Pomodoro Technique</h3>
+					<p class="italic small">(Francesco Cirillo, 1980s) </p>
+					<img src="assets/images/pomodoro.jpg" alt="Pomodoro" class="small margin-none">
+					<p class="small">Work per intervals of <strong>25 minutes</strong> (focused) + 5 min relax</p>
+
 				</section>
 
 				<section>
-					<h3>Self Productivity: GTD</h3>
+					<h3>Self Productivity: Gettings Things Done (GTD)</h3>
+					<p class="italic small">(David Allen, 2001)</p>
+					<img src="assets/images/gtd.jpg" alt="GTD" class="large margin-none">
+
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
@@ -631,43 +683,6 @@
 						<tr>
 							<td class="right italic">Persuade, Reward, Punish, Control</td>
 							<td class="italic">Delegate, Decentralize, Trust, Facilitate, Evaluate</td>
-						</tr>
-					</table>
-				</section>
-
-				<section>
-					<h3>What is the current stage of my team?</h3>
-					<p class="xxsmall"> Tribal Leadership - (Logan, King & Fischer-Wright, 2008)</p>
-					<table class="xsmall">
-						<tr class="small">
-							<th>Stage</th>
-							<th>Mood</th>
-							<th>Theme</th>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
-							<td>Life sucks</td>
-						</tr>
-						<tr>
-							<td>2</td>
-							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
-							<td>My Life sucks</td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
-							<td>I'm great (and you're not!)</td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
-							<td>We'are great (and they're not!)</td>
-						</tr>
-						<tr>
-							<td>5</td>
-							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
-							<td>Life is great</td>
 						</tr>
 					</table>
 				</section>
@@ -740,11 +755,16 @@
 
 				<section>
 					<h3>Niko-Niko Calendar</h3>
-					<img src="assets/images/nikoniko.png" alt="Faces" class="large">
+					<div class="">
+						 <img src="assets/images/nikoniko.png" alt="Faces" class="large margin-none">
+					</div>
+					<img src="assets/images/nikoniko-calendar.jpg" alt="Niko Niko Calendar" class="small margin-none">
+
 				</section>
 
 				<section>
-					<h3>Ask the Team: One 2 One Meetings</h3>
+					<h3>Ask the Team</h3>
+					<p class="italic">One 2 One Meetings</p>
 					<ul class="xsmall none">
 						<li><strong class="featured">OPEN</strong> - What's on your mind?</li>
 						<li><strong class="featured">SELF ESTEEM</strong> - What is your biggest accomplishment this month?</li>
@@ -758,13 +778,20 @@
 
 				<section>
 					<h3>Team Identity</h3>
-					<p class="small">Team Name</p>
-					<ul>
-						<li>What make us specials?</li>
-						<li>What do we want to remember?</li>
-						<li>What do represent us?</li>
+					<div><img src="assets/images/team.png" alt="Team" class="medium margin-none"></div>
+					<p class="small">Team Name (not team project name)</p>
+					<ul class="small">
+						<li>What make us <strong>special</strong>?</li>
+						<li>What do we want to <strong>remember</strong>?</li>
+						<li>What do <strong>represent</strong> us?</li>
 					</ul>
-					@TODO: dragon!
+				</section>
+
+				<section>
+					<h3>Team Gamification</h3>
+					<p class="small italic">Our team fight against Zombies, Orcs & Dragons</p>
+					<div><img src="assets/images/cerebro.png" alt="Zombies, Orcs & Dragons" class="xsmall margin-none"></div>
+					<div><img src="assets/images/dragon.jpg" alt="Dragon wall" class="large circle margin-none"></div>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
@@ -776,19 +803,17 @@
 				<section>
 					<img src="assets/images/comic-characters-2022709_960_720.png" alt="Stop" class="small">
 					<p class="italic">"If it works do not change it!"</p>
-					<p class="small fragment">someone will do it better soon or later... (off the market)</p>
+					<p class="small fragment">someone will do it better soon or later... <div class="xsmall italic fragment">(.. and you will be off the market)</div></p>
+				</section>
+
+				<section>
+					<h3>The Agile Cicle</h3>
+					<img src="assets/images/agile-cicle.jpg" alt="Agile Cicle" class="large">
 				</section>
 
 				<section>
 					<h3>Retrospectives</h3>
-					<img src="assets/images/retrospective-5.png" class="large">
-					<ul class="xsmall right-30">
-						<li>Keep Doing: it works!</li>
-						<li>Less of: not helping.</li>
-						<li>More of: let's try it more</li>
-						<li>Stop doing: not working</li>
-						<li>Start doing: new ideas</li>
-					</ul>
+					<img src="assets/images/retrospective-5.png" class="large" alt="retrospective">
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
@@ -797,11 +822,13 @@
 				</section>
 
 				<section>
-					<ul>
-						<li>People are not Interchangeable pieces</li>
-						<li>Invest in a Healty environment</li>
-						<li>Grooming the team</li>
-						<li>Evolve!</li>
+					<ul class="center none small">
+						<li class="fragment">Think & Do</li>
+						<li class="fragment">People are <strong>not</strong> Interchangeable pieces</li>
+						<li class="fragment">Invest in a Healty/enjoyable environment</li>
+						<li class="fragment">Multifunctional teams are not made by FullStack people</li>
+						<li class="fragment">Grom the team (& persons)</li>
+						<li class="fragment">Take risks & Evolve!</li>
 					</ul>
 				</section>
 
